project card button wrap gap fixed

--- a/src/components/common/projectCard/projectCard.module.css
+++ b/src/components/common/projectCard/projectCard.module.css
@@ -36,8 +36,9 @@
   width: 85%;
   display: flex;
   justify-content: space-between;
-  height: 30%;
+  /* height: 30%; */
   align-items: center;
+  padding: 10px 0;
 }
 
 .img {
